objects/SFDC_Help__mdt.object
<CustomObject>
    <description>Contains metadata related to the types of links displayed within the sidebar help component within the application</description>
    <fields>
        <fullName>Description_Label__c</fullName>
        <description>The name of the Custom Label for the description of this link.</description>
        <inlineHelpText>The name of the Custom Label for the description of this link.</inlineHelpText>
        <label>Description Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon_Name__c</fullName>
        <description>The name of the SLDS icon to show with this link (if applicable).</description>
        <inlineHelpText>The name of the SLDS icon to show with this link (if applicable).</inlineHelpText>
        <label>Icon Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_URL__c</fullName>
        <description>The destination URL for this help item.</description>
        <inlineHelpText>The destination URL for this help item.</inlineHelpText>
        <label>Link URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Where this help item can be found in the application.</description>
        <inlineHelpText>Where this help item can be found in the application.</inlineHelpText>
        <label>Location</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Help Sidebar - Main Link</fullName>
                    <default>true</default>
                    <label>Help Sidebar - Main Link</label>
                </value>
                <value>
                    <fullName>Help Sidebar - Side Link</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title_Label__c</fullName>
        <description>The name of the Custom Label for the title of this link.</description>
        <inlineHelpText>The name of the Custom Label for the title of this link.</inlineHelpText>
        <label>Title Label</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SFDC Help</label>
    <listViews>
        <fullName>All_Items</fullName>
        <columns>MasterLabel</columns>
        <columns>Title_Label__c</columns>
        <columns>Description_Label__c</columns>
        <columns>Link_URL__c</columns>
        <columns>Icon_Name__c</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Items</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>SFDC Help</pluralLabel>
</CustomObject>